traefik2/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: maesh
    chart: metrics-0.0.6
    component: grafana
    heritage: Tiller
    release: maesh
  name: grafana-core
  namespace: maesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      component: core
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafana
        component: core
    spec:
      automountServiceAccountToken: false
      containers:
      - image: grafana/grafana:6.2.5
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: web
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: grafana-core
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: web
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: metrics-storage
        - mountPath: /var/lib/grafana/dashboards/traefik.json
          name: dashboards-grafana-traefik
          subPath: traefik.json
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      serviceAccount: grafana-k8s
      serviceAccountName: grafana-k8s
      terminationGracePeriodSeconds: 30
      volumes:
      - name: metrics-storage
        emptyDir: {}
      - configMap:
          defaultMode: 420
          name: grafana-dashboard-traefik
        name: dashboards-grafana-traefik
      - configMap:
          defaultMode: 420
          items:
          - key: grafana.ini
            path: grafana.ini
          - key: datasources.yaml
            path: provisioning/datasources/datasources.yaml
          - key: dashboards.yaml
            path: provisioning/dashboards/dashboards.yaml
          name: grafana-config
        name: grafana-config
