traefik2/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: maesh
    chart: metrics-0.0.6
    component: prometheus
    heritage: Tiller
    release: maesh
  name: prometheus-core
  namespace: maesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      component: core
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus
        component: core
      name: prometheus-main
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --storage.tsdb.retention=60d
        - --storage.tsdb.path="/prometheus/data/"
        - --web.enable-lifecycle
        - --config.file=/prometheus/config/prometheus.yaml
        image: prom/prometheus:v2.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/healthy
            port: webui
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: prometheus
        ports:
        - containerPort: 9090
          name: webui
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/ready
            port: webui
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 500M
          requests:
            cpu: 500m
            memory: 500M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /prometheus/config
          name: config-volume
        - mountPath: /prometheus/rules
          name: rules-volume
        - mountPath: /prometheus
          name: prometheus-storage
      - args:
        - --volume-dir=/etc/config
        - --volume-dir=/etc/rules
        - --webhook-url=http://localhost:9090/-/reload
        image: jimmidyson/configmap-reload:v0.2.2
        imagePullPolicy: IfNotPresent
        name: configmap-reload
        resources:
          limits:
            cpu: 10m
            memory: 15Mi
          requests:
            cpu: 10m
            memory: 10Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
          readOnly: true
        - mountPath: /etc/rules
          name: rules-volume
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccount: prometheus-k8s
      serviceAccountName: prometheus-k8s
      terminationGracePeriodSeconds: 30
      volumes:
      - name: prometheus-storage
        emptyDir: {}
      - configMap:
          defaultMode: 420
          name: prometheus-core
        name: config-volume
      - configMap:
          defaultMode: 420
          name: prometheus-rules
        name: rules-volume
