traefik2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 30000
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30001
    - protocol: TCP
      name: websecure
      port: 4443
      nodePort: 30002
  selector:
    app: traefik
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
