traefik2/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.127.0.0.1.xip.io`) && PathPrefix(`/whoami`)
    kind: Rule
    services:
    - name: whoami
      port: 80
